deploy/go-svc/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-svc
spec:
  selector:
    app: go-svc
  ports:
    - name: admin
      port: 5000
    - name: http
      port: 8000
